<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_white_baseline_add_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_shuffle"
        android:title="@string/menu_shuffle"
        android:icon="@drawable/ic_white_baseline_shuffle_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_resort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_white_baseline_sort_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_white_baseline_delete_24"
        app:showAsAction="always"/>
</menu>